<resources>
    <string name="app_name">Android Fun With Flags</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="world_regions">Regions</string>
    <string name="world_regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Guess the Country</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_region_message">
        One region must be selected. Setting Europe as the default region.
    </string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current flag in the quiz</string>
    <string name="default_region">Europe</string>
    <string name="title_activity_settings">Settings</string>

    <string name="titulo_usuario">Usuario</string>
    <string name="titulo_contraseña">Contraseña</string>
    <string name="hint_usuario">Ingrese el usuario</string>
    <string name="hint_contraseña">Ingrese la contraseña</string>
    <string name="button_ingresar">Iniciar Sesión</string>
    <string name="ganaste">Felicidades, Ganaste!</string>
    <string name="button_salir">Salir</string>
</resources>
