<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_titulo_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_usuario"
        android:textSize="18sp"
        android:layout_margin="15sp"/>

    <EditText
        android:id="@+id/editText_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/hint_usuario"
        android:textSize="18sp"
        android:layout_margin="15sp"/>

    <TextView
        android:id="@+id/textView_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_contraseña"
        android:textSize="18sp"
        android:layout_margin="15sp"/>

    <EditText
        android:id="@+id/editText_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="18sp"
        android:layout_margin="15sp"/>

    <Button
        android:id="@+id/button_iniciar_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ingresar"
        android:textSize="18sp"
        android:layout_margin="25sp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"/>
</LinearLayout>